<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GearBowl</string>
    <string name="action_settings">Settings</string>
    <string name="new_game_button">New Game</string>
    <string name="load_game_button">Load Game</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="create_team">Create</string>
    <string name="play_button">Play</string>
    <string name="back_button">Back</string>
    <string name="empty_team">Empty</string>
    <string name="title_activity_team_builder">TeamBuilderActivity</string>
    <string name="type_string">Type:</string>
    <string name="exp_string">Experience:</string>
    <string name="cost_string">Cost:</string>
    <string name="strength_string">Strength:</string>
    <string name="toughness_string">Toughness:</string>
    <string name="agility_string">Agility:</string>
    <string name="dodge_string">Dodge:</string>
    <string name="jump_string">Jump:</string>
    <string name="hands_string">Hands:</string>
    <string name="ap_string">AP:</string>
    <string name="team_builder_title">Team Builder</string>
    <string name="title_activity_player_pager">PlayerPagerActivity</string>
    <string name="clear_button">Clear</string>
    <string name="hire_button">Hire</string>
    <string name="fire_button">Fire</string>
    <string name="save_button">Save</string>
    <string name="load_button">Load</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="title_activity_game">Game</string>

</resources>
