<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
        <EditText android:id="@+id/team_name"
	        android:hint=""
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
        <Button android:id="@+id/team_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/save_button"/>
        <Button android:id="@+id/team_load"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/load_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton android:id="@+id/player_left"
        	android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/left_arrow_small"/>
        <ImageView android:id="@+id/player_selection_image"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
        <ImageButton android:id="@+id/player_right"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/right_arrow_small"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:gravity="center">
        <ToggleButton android:id="@+id/player_hire"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textOff="@string/hire_button"
        	android:textOn="@string/hire_button"/>
        <ToggleButton android:id="@+id/player_fire"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/fire_button"
			android:textOff="@string/fire_button"
        	android:textOn="@string/fire_button"/>
    </LinearLayout>
    
    <ListView 
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
   
   <Button android:id="@+id/team_clear"
       	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:text="@string/clear_button"/>
       
   
    

</LinearLayout>
