<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#222222"
    tools:context=".CreateGameActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/team_one_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:background="@null"
            android:src="@drawable/red_team_button_dark_small" />

        <TextView 
            android:id="@+id/team_one_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/empty_team" />

        <Button
            android:id="@+id/team_one_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/create_team"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/team_two_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/green_team_button_dark_small" />
        <TextView 
            android:id="@+id/team_two_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/empty_team" />

        <Button
            android:id="@+id/team_two_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/create_team" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/team_three_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/blue_team_button_dark_small" />
        
        <TextView 
            android:id="@+id/team_three_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/empty_team" />

        <Button
            android:id="@+id/team_three_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/create_team" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/team_four_button"
           android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/yellow_team_button_dark_small" />
        
        <TextView 
            android:id="@+id/team_four_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content" 
            android:layout_margin="10dp"
            android:text="@string/empty_team"/>

        <Button
            android:id="@+id/team_four_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/create_team" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center"
        android:layout_margin="10dp">

        <ImageButton
            android:id="@+id/map_left_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/left_arrow_small" />

        <ImageView
            android:id="@+id/mapView"
            android:scaleType="fitCenter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/battlemapmini" />

        <ImageButton
            android:id="@+id/map_right_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/right_arrow_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="bottom|center">

        <Button
            android:id="@+id/create_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_button" />

    </LinearLayout>

</LinearLayout>
